[package]
name = "sp-rpc"
version = "5.0.0"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/axtend/substrate/"
description = "Substrate RPC primitives and utilities."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
sp-core = { version = "5.0.0", path = "../core" }
rustc-hash = "1.1.0"

[dev-dependencies]
serde_json = "1.0.74"
